--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1132,6 +1132,8 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
 <p>Find quote.</p>
 </blockquote>
 
+<p>QUOTE</p>
+
 <p>For more information, please follow the links below:
 <a href="https://en.wikipedia.org/wiki/Ford_Prefect_(character)">LinkedIn</a></p>
 
